# POD_AI

./: .gitignore  .gitmodules  AGENTS.md  LORA_CATALOG.md  README.md  docker-compose.prodlike.yml  后端架构与业务模型.md  架构实施计划.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 197ef9761a80_merge_comfyui_lora_heads.py  1a5aa64aae5e_add_ability_invocation_logs.py  20260114_ability_model_expansion.py  20260126_add_eval_run_output_json.py  20260204_add_ability_version.py  20260204_add_comfyui_lora_base_models.py  20260204_add_comfyui_lora_catalog.py  20260204_add_comfyui_model_plugin_catalog.py  20260217_add_coze_workflow_id.py  20260218_add_eval_public_fields.py  20260218_add_eval_tables.py  20260218_merge_heads.py  20260219_merge_eval_heads.py  20260220_add_ability_created_at_indexes.py  20260221_add_agent_management_tables.py  20260222_add_comfyui_version_catalog.py  (+5 more)
backend/app/: main.py
backend/docs/: tasks-schema.md
backend/scripts/: backfill_async_ability_logs.py  backfill_kie_error_messages.py  create_schema.py  db_upgrade.py  debug_eval_workflow.py  docker-entrypoint.sh  load_test_coze_tools.py  preflight_run.py  purge_eval_runs.py  purge_test_data.py  purge_unfinished_ability_tasks.py  smoke_coze_plugin.py  smoke_eval_workflows.py  test_expand_mask_color.py  test_oss_connection.py  test_set_dpi_and_upscale.py
backend/tests/: conftest.py  test_ability_task_resume.py  test_coze_client_invalid_response.py  test_eval_service_parsing.py  test_kie_status_retry.py
docs/: api.md  (+30 more)
(+433 files in other folders)
